--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,19 @@
 cubemx
-*.lck
-*-backups
+
+# Temporary files
+*.000
+*.bak
+*.bck
+*.kicad_pcb-bak
+*.kicad_sch-bak
+*.kicad_prl
+*.sch-bak
+*~
+_autosave-*
+*.tmp
+*-save.pro
+*-save.kicad_pcb
 fp-info-cache
-*-bak
+
+# Netlist files (exported from Eeschema)
+*.net
