--- a/fw/Cargo.toml
+++ b/fw/Cargo.toml
@@ -1,8 +1,21 @@
 [package]
+edition = "2021"
 name = "sbms"
 version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT"
 
 [dependencies]
+embassy-stm32 = { version = "0.1.0",  git = "https://github.com/embassy-rs/embassy", features = ["nightly", "defmt", "time-driver-any", "stm32g0b1kc", "memory-x", "unstable-pac", "exti"]  }
+embassy-sync = { version = "0.2.0", features = ["defmt"] }
+embassy-executor = { version = "0.3.0",  git = "https://github.com/embassy-rs/embassy", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
+embassy-time = { version = "0.1.3",  git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
+
+defmt = "0.3"
+defmt-rtt = "0.4"
+
+cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
+cortex-m-rt = "0.7.0"
+panic-probe = { version = "0.3", features = ["print-defmt"] }
+
+[profile.release]
+debug = 2
