--- a/fw/Taskfile.yml
+++ b/fw/Taskfile.yml
@@ -5,10 +5,6 @@ tasks:
     cmds:
       - make -j4
     dir: build
-    silent: true
-  clean:
-    cmds:
-      - rm -rf build
-      - mkdir build
-      - cd build && cmake ..
-    silent: true
+  clean: rm -rf build && mkdir build
+  cmake: cd build && cmake .. {{.CLI_ARGS}}
+  options: cd build && cmake .. -LAH
